--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -24,12 +24,18 @@ spring:
                         hubProductImportTask: 
                               destination: hub.product.import.task
                               content-type: application/json
+                        productExportTask: 
+                              destination: hub.product.import.task
+                              content-type: application/json
               rabbit: 
                       bindings: 
                             pendingProductImportTask: 
                                   producer: 
                                            prefix: HA.
                             hubProductImportTask: 
+                                  producer: 
+                                           prefix: HA.
+                            productExportTask: 
                                   producer: 
                                            prefix: HA.
   jackson: 
