--- a/ephub-product-business-service/src/main/resources/config/application-qa.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-qa.yml
@@ -26,7 +26,7 @@ spring:
                               destination: hub.product.import.task
                               content-type: application/json
                         productExportTask: 
-                              destination: hub.product.import.task
+                              destination: product.export.task
                               content-type: application/json
               rabbit: 
                       bindings: 
