modify fdfs address

--- a/ephub-fdfs-client-service/src/main/resources/config/application-qa.yml
+++ b/ephub-fdfs-client-service/src/main/resources/config/application-qa.yml
@@ -40,3 +40,9 @@ banner:
        location: classpath:banner/banner.txt # Banner file location.
        image:
              location: classpath:banner/logo.jpg # Banner image file location (jpg/png can also be used).
+shangpin:
+   hub:
+       fdfs:
+             port: 80
+             resHost: 192.168.9.71
+             groupName: group2
