--- a/picture-product-consumer-service/src/main/resources/config/application-pro.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-pro.yml
@@ -1,123 +1,49 @@
+feign.hystrix.enabled: false
 spring: 
   rabbitmq: 
-           host: 192.168.20.175
+           host: 172.20.11.50
            port: 5672
-           username: scm-message-service
-           password: scm-message-service
-           virtual-host: /scm-message-service
+           username: ephub-message-service
+           password: ephub-message-service
+           virtual-host: /ephub-message-service
   cloud: 
+        consul: 
+          host: localhost
+          port: 8500
+          discovery: 
+            prefer-agent-address: true
+            prefer-ip-address: true
+            health-check-interval: 15s
+            register: false
+            register-health-check: false
         stream: 
               bindings: 
-                        spinnakerPendingProduct: 
-                              destination: spinnaker.pending.product
+                        supplierPictureProduct: 
+                              destination: supplier.product.picture
                               group: one
                               consumer: 
-                                       concurrency: 5
+                                       concurrency: 2
                                        maxAttempts: 1
-                        ostorePendingProduct: 
-                              destination: ostore.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        brunarossoPendingProduct: 
-                              destination: brunarosso.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        stefaniaPendingProduct: 
-                              destination: stefania.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        gebPendingProduct: 
-                              destination: geb.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        coltortiPendingProduct: 
-                              destination: coltorti.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        tonyPendingProduct: 
-                              destination: tony.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1
-                        biondioniPendingProduct: 
-                              destination: biondioni.pending.product
-                              group: one
-                              consumer: 
-                                       concurrency: 5
-                                       maxAttempts: 1                                                                                                                                                                                                                                                                                 
               rabbit: 
                       bindings: 
-                            spinnakerPendingProduct: 
+                            supplierPictureProduct: 
                                   consumer: 
                                        prefix: HA.
                                        autoBindDlq: false
                                        requeueRejected: true
                                        republishToDlq: false
-                            ostorePendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            brunarossoPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            stefaniaPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            gebPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            coltortiPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            tonyPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false
-                            biondioniPendingProduct: 
-                                  consumer: 
-                                       prefix: HA.
-                                       autoBindDlq: false
-                                       requeueRejected: true
-                                       republishToDlq: false                                                                                                                                                                                                                                                                          
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
-  mail: 
-       default-recipient: yan_xiao_bin@126.com
-       default-sender: yanxiaobin@shangpin.com
-       default-encoding: UTF-8 # Default MimeMessage encoding.
-       host: smtp.263.net # SMTP server host. For instance `smtp.example.com`
-       port: 25 # SMTP server port.
-       protocol: smtp # Protocol used by the SMTP server.
-       username: yanxiaobin@shangpin.com # Login user of the SMTP server.
-       password: 123.com # Login password of the SMTP server.
-       test-connection: true # Test that the mail server is available on startup.
+  #mail: 
+       #default-recipient: yan_xiao_bin@126.com
+       #default-sender: yanxiaobin@shangpin.com
+       #default-encoding: UTF-8 # Default MimeMessage encoding.
+       #host: smtp.263.net # SMTP server host. For instance `smtp.example.com`
+       #port: 25 # SMTP server port.
+       #protocol: smtp # Protocol used by the SMTP server.
+       #username: yanxiaobin@shangpin.com # Login user of the SMTP server.
+       #password: 123.com # Login password of the SMTP server.
+       #test-connection: false # Test that the mail server is available on startup.
 banner: 
        charset: UTF-8 # Banner file encoding.
        location: classpath:banner/banner.txt # Banner file location.
