--- a/ephub-product-business-service/src/main/resources/config/application-pro.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-pro.yml
@@ -70,3 +70,4 @@ shangpin:
              gmsSizeUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetProductSize
              gmsBrandUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetBrands
              gmsCategoryUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetCategory
+             scmsSupplierInfoUrl: http://scm.shangpin.com/scms/Supplier/GetSupplierInfoListByNo?supplierNo=
