图片域名变更

--- a/ephub-fdfs-client-service/src/main/resources/config/application-pro.yml
+++ b/ephub-fdfs-client-service/src/main/resources/config/application-pro.yml
@@ -44,5 +44,5 @@ shangpin:
    hub:
        fdfs:
              port: 80
-             resHost: pic.ephub.spidc1.com
+             resHost: pic.ephub.shangpin.com
              groupName: group2
