--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -8,7 +8,7 @@ spring:
            virtual-host: /scm-message-service
   cloud:
         consul: 
-          host: 192.168.20.235
+          host: localhost
           port: 8500
           discovery: 
             prefer-agent-address: true
