--- a/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
+++ b/ephub-data-mysql-service/src/main/resources/config/application-dev.yml
@@ -1,7 +1,7 @@
 spring: 
   cloud: 
        consul: 
-         host: 192.168.20.235
+         host: localhost
          port: 8500
          discovery: 
            prefer-agent-address: true
