--- a/settings.gradle
+++ b/settings.gradle
@@ -16,34 +16,11 @@ include 'iog-facade-impl'
 include 'iog-sop'
 include 'iog-generater-util'
 include 'iog-web-apiHandler'
-
 include 'coltorti'
-include 'atelier-ostore-order'
 
-
-
-include 'efashion-order'
-include 'report'
-include 'picturedown'
-
-include 'dellogliostore'
-include 'stockMonti'
-include 'project-mq'
-include 'stockMontiHK'
-include 'stockclean'
-include 'OpenTest'
-include 'picturedown'
-include 'order-control'
-include 'tufano'
-include 'lungolivigno-order'
-include 'atelier-paolo-order'
-include 'GiBiLogic-stock'
-include 'spinnaker'
-include 'picturedown'
-include 'monnierfreres'
+include 'palomaBarcelo-stock'
 include 'coltorti'
-include 'studio69'
-include 'smets-hk-stock'
-include 'smets-stock'
+include 'mclabels'
+include 'mclabels-stock'
 include 'stefaniamode'
 
