--- a/asynchronous-task-consumer-service/src/main/resources/config/application-dev.yml
+++ b/asynchronous-task-consumer-service/src/main/resources/config/application-dev.yml
@@ -63,9 +63,9 @@ spring:
        port: 21
        userName: dev
        password: shangpin@123
-       ftpHubPath: hub/
-       ftpPendingPath: pending/
-       exportPath: pending_export/
+       ftpHubPath: /hub/
+       ftpPendingPath: /pending/
+       exportPath: /pending_export/
        localResultPath: /usr/local/share/applications/asynchronous-task-consumer-service/ftp/
   mail: 
        default-recipient: yan_xiao_bin@126.com
