--- a/ephub-product-business-service/src/main/resources/config/application-qa.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-qa.yml
@@ -1,4 +1,8 @@
-feign.hystrix.enabled: false
+feign.hystrix.enabled: true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
+ribbon:
+  ConnectTimeout: 30000
+  ReadTimeout: 30000
 spring: 
   rabbitmq: 
            host: 192.168.20.175
