--- a/monnierfreres/src/main/resources/param.properties
+++ b/monnierfreres/src/main/resources/param.properties
@@ -2,4 +2,4 @@ path=/usr/local/app/monnierfreres/monnierfreres
 url=http://www.monnierfreres.eu/media/lengow/eu_en/lengow_feed.csv
 supplierId=2015100401556
 day=90
-picpath=/mnt/nfs/monnierfreres/
+picpath=
