--- a/picture-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -8,7 +8,7 @@ spring:
            virtual-host: /scm-message-service
   cloud: 
         consul: 
-          host: localhost
+          host: 192.168.20.235
           port: 8500
           #discovery: 
             #instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
