配置超时时间

--- a/asynchronous-task-consumer-service/src/main/resources/config/application-pro.yml
+++ b/asynchronous-task-consumer-service/src/main/resources/config/application-pro.yml
@@ -1,4 +1,7 @@
 feign.hystrix.enabled: false
+ribbon:
+  ConnectTimeout: 120000
+  ReadTimeout: 120000
 spring: 
   rabbitmq: 
            host: 172.20.11.49
