--- a/fetchProductFromHK/build.gradle
+++ b/fetchProductFromHK/build.gradle
@@ -1,4 +1,3 @@
-
 dependencies {
     compile(
             "org.mybatis:mybatis:3.2.2",
@@ -8,8 +7,7 @@ dependencies {
             project(':project-common'),
             project(':project-muldatass-dao'),
             project(':iog-common-product2'),
-               project(':openapi-ice'),
-             "com.google.code.gson:gson:2.3.1",
+             "com.google.code.gson:gson:2.3.1"
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
