--- a/order-push-consumer-service/build.gradle
+++ b/order-push-consumer-service/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('junit:junit:4.12')
 }
 
 dependencyManagement {
