--- a/order-push-consumer-service/src/main/resources/config/application-dev.yml
+++ b/order-push-consumer-service/src/main/resources/config/application-dev.yml
@@ -368,7 +368,15 @@ shangpin:
               key: MPm32XJp7M
               isPurchaseExp: no
               openApiKey: 
-              openApiSecret: 
+              openApiSecret:
+      baseBlu:
+              stockUrl: http://77.81.230.19/WexComServerTest/StockEc/GetStockByEan13
+              orderCreateUrl: http://77.81.230.19/WexComServerTest/DocumentEc/SHAInsertOrderEc
+              orderQueryUrl: http://77.81.230.19/WexComServerTest/DocumentEc/SHAGetListOrderDetailEc
+              sKey: SHA
+              isPurchaseExp: no
+              openApiKey:
+              openApiSecret:
       supplier:
               delayTime: 1000
               retry: 120
