--- a/fetchProductFromHK/src/main/resources/conf.properties
+++ b/fetchProductFromHK/src/main/resources/conf.properties
@@ -1,5 +1,11 @@
-relationFlag=false
-supplierId=
-productFlag=false
+supplierId=2015091701503_
 startDate=
 endDate=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=zhaogenchun@shangpin.com
+subject=hk\u540C\u6B65\u6570\u636E
+messageText=
+messageType=text/html;charset=utf-8
