--- a/ephub-product-business-service/src/main/resources/config/application-pro.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-pro.yml
@@ -44,6 +44,7 @@ spring:
                                            prefix: HA.
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+       time-zone: GMT+8
   ftp:
        host: 172.20.10.88
        port: 21
