--- a/ephub-product-business-service/src/main/resources/config/application-qa.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-qa.yml
@@ -45,6 +45,7 @@ spring:
                                            prefix: HA.
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+       time-zone: GMT+8
   ftp:
        host: 192.168.20.110
        port: 21
