--- a/picture-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -1,4 +1,8 @@
-feign.hystrix.enabled: false
+feign.hystrix.enabled: true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 120000
+ribbon:
+  ConnectTimeout: 120000
+  ReadTimeout: 120000
 spring: 
   rabbitmq: 
            host: 192.168.20.175
